--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,9 +64,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Usia (17 tahun - 25 tahun)"
+        android:textColor="@color/black"
         android:layout_marginTop="10dp"
         android:padding="10dp"/>
 
+<!--    Untuk seek bar jika di emulator tidak berfungsi tapi jika di hape bisa-->
     <SeekBar
         android:id="@+id/seekbarUmur"
         android:layout_width="match_parent"
@@ -74,7 +76,7 @@
         android:max="25"
         android:min="17"
         android:padding="15dp"
-        android:progress="18" />
+        android:progress="20" />
 
     <TextView
         android:layout_width="110dp"
